LU-1854 ptlrpc: track culled request seq

Ptlrpc service should track highest culled request-seq by storing
it in ptlrpc_servce_part::scp_hist_seq_culled, however, there is
a missed case in ptlrpc_server_drop_request(): if rq_reply_state of
the request is pre-allocated and it should be freed immediately,
ptlrpc_server_drop_request() will unlink the request from history
list w/o track sequence number, and it can be the reason of
hitting LASSERT while reading req_history.

Signed-off-by: Liang Zhen <liang@whamcloud.com>
Change-Id: I74ed9c7f00e77707628d628792bf9583c4bc4259
Reviewed-on: http://review.whamcloud.com/3916
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: wangdi <di.wang@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>